# ParkingSystem

./: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.hpp  GateController.cpp  GateController.hpp  ModbusUtils.cpp  ModbusUtils.hpp  README.md  SerialPort.cpp  SerialPort.hpp  config.txt  fake_barrier.py  main.cpp
Emulators/RFIDTool/: main.cpp
include/: Middleware.hpp  NetworkServer.hpp  ParkingSystem.hpp  RfidReader.hpp
src/: NetworkServer.cpp  ParkingSystem.cpp  main.cpp
